syntax = "proto3";

package crypto_election.core;

import "helpers.proto";
import "google/protobuf/timestamp.proto";

message Participant {
    exonum.PublicKey pub_key = 1;
    string name = 2;
    string email = 3;
    string phone_number = 4;
    string pass_code = 5;
}

message Administration {
    exonum.PublicKey pub_key = 1;
    string name = 2;
    OptionalPubKey principal_key = 3;
    // ToDo: Add polygons.
}

message Election {
    int64 id = 1;
    string name = 2;
    bool is_opened = 3;
    google.protobuf.Timestamp start_date = 4;
    google.protobuf.Timestamp finish_date = 5;
    repeated ElectionOption options = 6;
}

message ElectionOption {
    int32 id = 1;
    string title = 2;
}

message PolygonDef {
    LineStringDef exterior = 1;
    repeated LineStringDef interiors = 2;
}

message LineStringDef {
    repeated CoordinateDef items = 1;
}

message CoordinateDef {
    double x = 1;
    double y = 2;
}

message CreateParticipant {
    string name = 1;
    string email = 2;
    string phone_number = 3;
    string pass_code = 4;
}

message OptionalPubKey {
    bool has_value = 1;
    exonum.PublicKey value = 2;
}

message CreateAdministration {
    string name = 1;
    OptionalPubKey principal_key = 2;
}

message IssueElection {
    string name = 1;
    google.protobuf.Timestamp start_date = 2;
    google.protobuf.Timestamp finish_date = 3;
    repeated string options = 4;
}

message VecI64Wrap {
    repeated int64 _0 = 1;
}
